--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "jellyfin"
 version = "0.1.0"
 edition = "2021"
-licence = "MIT"
+license = "MIT"
 keywords = ["media", "jellyfin", "streaming"]
 categories = ["api-bindings"]
 description = "Bindings to the jellyfin web API"
