--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jellyfin"
-version = "0.1.2"
+version = "0.1.2+R1"
 edition = "2021"
 license = "MIT"
 keywords = ["media", "jellyfin", "streaming"]
