--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ debug = []
 
 [dependencies]
 md5 = "0.7.0"
+reqwest = { version = "0.11.18", features = ["rustls", "json"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_derive = "1.0.164"
 serde_json = "1.0.97"
 sha1 = "0.10.5"
-surf = "2.3.2"
 url = "2.4.0"
 whoami = "1.4.0"
 
