--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,4 @@ url = "2.4.0"
 whoami = "1.4.0"
 
 [dev-dependencies]
-tokio = { version = "*", features = ["full"] }
+tokio = { version = "1.28.2", features = ["macros"] }
